# Termino

./: .gitignore  bot.py  help.txt  helpcommand.json  helpcommand.py  noncoroobj.py  pyproject.toml  readme.md  run.py  terminohelp.py  token.txt  virtualenv.bat  virtualenv.sh
cmdlist/: games.txt  mod.txt
cmdlist/settings/: mute.txt
cogs/: fun.py  games.py  image.py  jsk.py  mod.py  settings.py  utility.py  voice.py
cogs/util/: checks.py  converters.py  corefuncs.py  db.py  funcs.py  imageutil.py  reddit.py
cogs/util/clients/: db.py  reddit.py
cogs/util/database/: db.py  termino_servers.py  termino_servers.sql
fun/: __init__.py  commands.py  converters.py  fun.py  games.py
games/: __init__.py  minigames.py
moderation/: __init__.py  kickban.py  mute.py
noncoroutines/: classes.py  funcs.py
scripts/: .gitignore  bot.py  converters.py  data.json  helpcommand.json  helpcommand.py  invitelink.txt  nohup.out  noncoroobj.py  noncoroutines.py  run.py
scripts/cmdlist/: funcommands.txt  mod.txt
scripts/converters/: __init__.py  advancedconverters.py  converters.py
scripts/fun/: __init__.py  commands.py  converters.py  games.py
scripts/help/: games.txt  mod.txt
scripts/moderation/: __init__.py  joinsettings.py  kickban.py  mute.py  nohup.out
scripts/noncoroutines/: __init__.py  classes.py  funcs.py
scripts/settings/: joinsettings.py  mutesettings.py
scripts/txt files/: help.txt  help_fun.txt  help_moderation.txt
scripts/util/: __init__.py  joinsettings.py  mutesettings.py
settings/: joinsettings.py  mutesettings.py
txt files/: help.txt
(+4 files in other folders)
