[tool.poetry]
name = "repl_python3_Termino"
version = "0.1.0"
description = ""
authors = ["scriptoentity <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
aPRAW = "^0.6.8-alpha.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
