[tool.poetry]
name = "repl_python3_Termino"
version = "0.1.0"
description = ""
authors = ["scriptoentity <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
aPRAW = "^0.6.8-alpha.0"
asyncpg = "^0.23.0"
jishaku = "^2.2.0"
python-dotenv = "^0.19.0"
redditeasy = "^3.6.2"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
